--- a/fr/apprendre-anglais-efficacement.html
+++ b/fr/apprendre-anglais-efficacement.html
@@ -413,26 +413,224 @@
     <!-- Structured data for better SEO (JSON-LD) -->
     <script type="application/ld+json">
     {
-        "@context": "https://schema.org",
-        "@type": "Article",
-        "headline": "Comment apprendre l'anglais efficacement : Mon parcours et mes conseils",
-        "description": "Découvrez des stratégies éprouvées pour apprendre l'anglais efficacement avec notre guide complet basé sur une expérience réelle.",
-        "author": {
-            "@type": "Organization",
-            "name": "englishtests.online"
-        },
-        "publisher": {
-            "@type": "Organization",
-            "name": "englishtests.online",
-            "url": "https://englishtests.online/"
-        },
-        "url": "https://englishtests.online/fr/apprendre-anglais-efficacement",
-        "mainEntityOfPage": {
-            "@type": "WebPage",
-            "@id": "https://englishtests.online/fr/apprendre-anglais-efficacement"
-        },
-        "keywords": "apprendre anglais efficacement, stratégies d'apprentissage anglais, immersion anglaise, ressources apprentissage anglais"
+  "@context": "https://schema.org",
+  "@type": "Article",
+  "headline": "Comment Apprendre l'Anglais Efficacement : Mon Parcours et Mes Conseils",
+  "description": "Un guide complet pour apprendre l'anglais efficacement basé sur une expérience réelle. Couvre la définition d'objectifs, l'engagement actif, l'immersion, les stratégies d'apprentissage personnalisées, l'écoute, l'expression orale, la lecture, l'écriture, la grammaire, l'enrichissement du vocabulaire, les outils technologiques y compris les assistants IA, et l'importance de la constance.",
+  "keywords": [
+    "apprendre anglais efficacement",
+    "stratégies d'apprentissage de l'anglais",
+    "immersion en anglais",
+    "apprentissage personnalisé de l'anglais",
+    "pratique d'écoute en anglais",
+    "aisance en expression orale anglaise",
+    "compréhension de lecture en anglais",
+    "pratique d'écriture en anglais",
+    "conseils de grammaire anglaise",
+    "enrichissement du vocabulaire anglais",
+    "technologie d'apprentissage des langues",
+    "IA pour l'apprentissage des langues",
+    "constance dans l'apprentissage de l'anglais"
+  ],
+  "author": {
+    "@type": "Organization",
+    "name": "englishtests.online",
+    "url": "https://englishtests.online/"
+  },
+  "publisher": {
+    "@type": "Organization",
+    "name": "englishtests.online",
+    "url": "https://englishtests.online/",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://englishtests.online/favicon-192x192.png",
+      "width": 192,
+      "height": 192
     }
-    </script>
+  },
+  "image": {
+    "@type": "ImageObject",
+    "url": "https://englishtests.online/favicon-192x192.png",
+    "width": 192,
+    "height": 192
+  },
+  "datePublished": "2025-03-15",
+  "dateModified": "2025-04-01",
+  "mainEntityOfPage": {
+    "@type": "WebPage",
+    "@id": "https://englishtests.online/fr/apprendre-anglais-efficacement"
+  },
+  "url": "https://englishtests.online/fr/apprendre-anglais-efficacement",
+  "inLanguage": "fr",
+  "articleSection": "Apprentissage de l'Anglais",
+  "articleBody": "Apprenez à maîtriser l'anglais efficacement grâce à des conseils pratiques couvrant la définition d'objectifs, l'engagement actif, l'immersion, l'apprentissage personnalisé, l'écoute, l'expression orale, la lecture, l'écriture, la grammaire, le vocabulaire, les outils technologiques et les stratégies de constance.",
+  "about": {
+    "@type": "Thing",
+    "name": "Apprentissage de la Langue Anglaise"
+  },
+  "mentions": [
+    {
+      "@type": "SoftwareApplication",
+      "name": "Anki",
+      "applicationCategory": "Éducation",
+      "url": "https://apps.ankiweb.net/"
+    },
+    {
+      "@type": "SoftwareApplication",
+      "name": "HelloTalk",
+      "applicationCategory": "Communication",
+      "url": "https://www.hellotalk.com"
+    },
+    {
+      "@type": "SoftwareApplication",
+      "name": "ChatGPT",
+      "applicationCategory": "Intelligence Artificielle",
+      "url": "https://chat.openai.com/"
+    },
+    {
+      "@type": "SoftwareApplication",
+      "name": "Claude",
+      "applicationCategory": "Intelligence Artificielle",
+      "url": "https://claude.ai/"
+    }
+  ],
+  "offers": {
+    "@type": "Offer",
+    "price": "0",
+    "priceCurrency": "USD",
+    "availability": "https://schema.org/InStock"
+  },
+  "alternativeHeadline": "12 Stratégies Éprouvées pour Maîtriser la Langue Anglaise",
+  "copyrightYear": "2025",
+  "accessibilityAPI": "ARIA",
+  "accessibilityControl": ["fullKeyboardControl", "fullMouseControl"],
+  "accessibilityFeature": ["alternativeText", "structuredNavigation"],
+  "accessibilityHazard": "noFlashingHazard",
+  "creator": {
+    "@type": "Organization",
+    "name": "KubiKDB",
+    "url": "https://play.google.com/store/apps/dev?id=5093525609695433503"
+  },
+  "audience": {
+    "@type": "Audience",
+    "audienceType": "Apprenants d'Anglais"
+  },
+  "potentialAction": {
+    "@type": "ReadAction",
+    "target": {
+      "@type": "EntryPoint",
+      "urlTemplate": "https://englishtests.online/fr/apprendre-anglais-efficacement"
+    }
+  },
+  "isPartOf": {
+    "@type": "WebSite",
+    "name": "English Tests Online",
+    "url": "https://englishtests.online/"
+  },
+  "hasPart": [
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/fr/apprendre-anglais-efficacement"
+      },
+      "name": "Fixer des Objectifs Clairs",
+      "position": 1
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/fr/apprendre-anglais-efficacement"
+      },
+      "name": "L'Engagement Actif est Essentiel",
+      "position": 2
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/fr/apprendre-anglais-efficacement"
+      },
+      "name": "Immergez-vous",
+      "position": 3
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/fr/apprendre-anglais-efficacement"
+      },
+      "name": "Apprentissage Personnalisé",
+      "position": 4
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/fr/apprendre-anglais-efficacement"
+      },
+      "name": "Entraînez Votre Oreille",
+      "position": 5
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/fr/apprendre-anglais-efficacement"
+      },
+      "name": "Exprimez-vous !",
+      "position": 6
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/fr/apprendre-anglais-efficacement"
+      },
+      "name": "Lire Largement",
+      "position": 7
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/fr/apprendre-anglais-efficacement"
+      },
+      "name": "Pratique de l'Écriture",
+      "position": 8
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/fr/apprendre-anglais-efficacement"
+      },
+      "name": "La Grammaire Est Importante",
+      "position": 9
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/fr/apprendre-anglais-efficacement"
+      },
+      "name": "Le Vocabulaire Est Puissance",
+      "position": 10
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/fr/apprendre-anglais-efficacement"
+      },
+      "name": "La Technologie Est Votre Alliée",
+      "position": 11
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/fr/apprendre-anglais-efficacement"
+      },
+      "name": "Constance et Persévérance",
+      "position": 12
+    }
+  ],
+  "educationalLevel": "Tous Niveaux",
+  "educationalUse": "Auto-apprentissage",
+  "interactivityType": "Expositif",
+  "learningResourceType": "Guide",
+  "typicalAgeRange": "13-"
+}
+</script>
 </body>
 </html>
