--- a/ar/taelim-alanjlyzyh-bikfaa.html
+++ b/ar/taelim-alanjlyzyh-bikfaa.html
@@ -415,26 +415,224 @@
     <!-- Structured data for better SEO (JSON-LD) -->
     <script type="application/ld+json">
     {
-        "@context": "https://schema.org",
-        "@type": "Article",
-        "headline": "كيفية تعلم اللغة الإنجليزية بفعالية: رحلتي ونصائحي",
-        "description": "اكتشف استراتيجيات مثبتة لتعلم اللغة الإنجليزية بفعالية مع دليلنا الشامل المبني على تجربة واقعية.",
-        "author": {
-            "@type": "Organization",
-            "name": "englishtests.online"
-        },
-        "publisher": {
-            "@type": "Organization",
-            "name": "englishtests.online",
-            "url": "https://englishtests.online/"
-        },
-        "url": "https://englishtests.online/ar/taelim-alanjlyzyh-bikfaa",
-        "mainEntityOfPage": {
-            "@type": "WebPage",
-            "@id": "https://englishtests.online/ar/taelim-alanjlyzyh-bikfaa"
-        },
-        "keywords": "تعلم اللغة الإنجليزية بفعالية, استراتيجيات تعلم اللغة الإنجليزية, الانغماس في اللغة الإنجليزية, موارد تعلم اللغة الإنجليزية"
-      }
-    </script>
+  "@context": "https://schema.org",
+  "@type": "Article",
+  "headline": "كيفية تعلم الإنجليزية بكفاءة: رحلتي ونصائحي",
+  "description": "دليل شامل لتعلم اللغة الإنجليزية بشكل فعال بناءً على تجربة حقيقية. يغطي تحديد الأهداف، والمشاركة النشطة، والانغماس اللغوي، واستراتيجيات التعلم الشخصية، والاستماع، والتحدث، والقراءة، والكتابة، والقواعد، وبناء المفردات، وأدوات التكنولوجيا بما في ذلك مساعدي الذكاء الاصطناعي، وأهمية الاستمرارية.",
+  "keywords": [
+    "تعلم الإنجليزية بكفاءة",
+    "استراتيجيات تعلم الإنجليزية",
+    "الانغماس في اللغة الإنجليزية",
+    "التعلم الشخصي للإنجليزية",
+    "تمارين الاستماع باللغة الإنجليزية",
+    "الطلاقة في التحدث بالإنجليزية",
+    "فهم القراءة باللغة الإنجليزية",
+    "تمارين الكتابة باللغة الإنجليزية",
+    "نصائح حول قواعد اللغة الإنجليزية",
+    "بناء مفردات اللغة الإنجليزية",
+    "تكنولوجيا تعلم اللغات",
+    "الذكاء الاصطناعي لتعلم اللغات",
+    "الاستمرارية في تعلم الإنجليزية"
+  ],
+  "author": {
+    "@type": "Organization",
+    "name": "englishtests.online",
+    "url": "https://englishtests.online/"
+  },
+  "publisher": {
+    "@type": "Organization",
+    "name": "englishtests.online",
+    "url": "https://englishtests.online/",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://englishtests.online/favicon-192x192.png",
+      "width": 192,
+      "height": 192
+    }
+  },
+  "image": {
+    "@type": "ImageObject",
+    "url": "https://englishtests.online/favicon-192x192.png",
+    "width": 192,
+    "height": 192
+  },
+  "datePublished": "2025-03-15",
+  "dateModified": "2025-04-01",
+  "mainEntityOfPage": {
+    "@type": "WebPage",
+    "@id": "https://englishtests.online/ar/taelim-alanjlyzyh-bikfaa"
+  },
+  "url": "https://englishtests.online/ar/taelim-alanjlyzyh-bikfaa",
+  "inLanguage": "ar",
+  "articleSection": "تعلم اللغة الإنجليزية",
+  "articleBody": "تعلم كيفية إتقان اللغة الإنجليزية بشكل فعال من خلال نصائح عملية تغطي تحديد الأهداف، والمشاركة النشطة، والانغماس اللغوي، والتعلم الشخصي، والاستماع، والتحدث، والقراءة، والكتابة، والقواعد، والمفردات، وأدوات التكنولوجيا، واستراتيجيات الاستمرارية.",
+  "about": {
+    "@type": "Thing",
+    "name": "تعلم اللغة الإنجليزية"
+  },
+  "mentions": [
+    {
+      "@type": "SoftwareApplication",
+      "name": "Anki",
+      "applicationCategory": "تعليم",
+      "url": "https://apps.ankiweb.net/"
+    },
+    {
+      "@type": "SoftwareApplication",
+      "name": "HelloTalk",
+      "applicationCategory": "اتصالات",
+      "url": "https://www.hellotalk.com"
+    },
+    {
+      "@type": "SoftwareApplication",
+      "name": "ChatGPT",
+      "applicationCategory": "ذكاء اصطناعي",
+      "url": "https://chat.openai.com/"
+    },
+    {
+      "@type": "SoftwareApplication",
+      "name": "Claude",
+      "applicationCategory": "ذكاء اصطناعي",
+      "url": "https://claude.ai/"
+    }
+  ],
+  "offers": {
+    "@type": "Offer",
+    "price": "0",
+    "priceCurrency": "USD",
+    "availability": "https://schema.org/InStock"
+  },
+  "alternativeHeadline": "12 استراتيجية مثبتة لإتقان اللغة الإنجليزية",
+  "copyrightYear": "2025",
+  "accessibilityAPI": "ARIA",
+  "accessibilityControl": ["fullKeyboardControl", "fullMouseControl"],
+  "accessibilityFeature": ["alternativeText", "structuredNavigation"],
+  "accessibilityHazard": "noFlashingHazard",
+  "creator": {
+    "@type": "Organization",
+    "name": "KubiKDB",
+    "url": "https://play.google.com/store/apps/dev?id=5093525609695433503"
+  },
+  "audience": {
+    "@type": "Audience",
+    "audienceType": "متعلمو اللغة الإنجليزية"
+  },
+  "potentialAction": {
+    "@type": "ReadAction",
+    "target": {
+      "@type": "EntryPoint",
+      "urlTemplate": "https://englishtests.online/ar/taelim-alanjlyzyh-bikfaa"
+    }
+  },
+  "isPartOf": {
+    "@type": "WebSite",
+    "name": "English Tests Online",
+    "url": "https://englishtests.online/"
+  },
+  "hasPart": [
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/ar/taelim-alanjlyzyh-bikfaa"
+      },
+      "name": "تحديد أهداف واضحة",
+      "position": 1
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/ar/taelim-alanjlyzyh-bikfaa"
+      },
+      "name": "المشاركة النشطة هي المفتاح",
+      "position": 2
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/ar/taelim-alanjlyzyh-bikfaa"
+      },
+      "name": "انغمس في اللغة",
+      "position": 3
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/ar/taelim-alanjlyzyh-bikfaa"
+      },
+      "name": "التعلم الشخصي",
+      "position": 4
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/ar/taelim-alanjlyzyh-bikfaa"
+      },
+      "name": "درّب أذنك",
+      "position": 5
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/ar/taelim-alanjlyzyh-bikfaa"
+      },
+      "name": "تحدث بجرأة!",
+      "position": 6
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/ar/taelim-alanjlyzyh-bikfaa"
+      },
+      "name": "القراءة على نطاق واسع",
+      "position": 7
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/ar/taelim-alanjlyzyh-bikfaa"
+      },
+      "name": "ممارسة الكتابة",
+      "position": 8
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/ar/taelim-alanjlyzyh-bikfaa"
+      },
+      "name": "القواعد مهمة",
+      "position": 9
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/ar/taelim-alanjlyzyh-bikfaa"
+      },
+      "name": "المفردات هي القوة",
+      "position": 10
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/ar/taelim-alanjlyzyh-bikfaa"
+      },
+      "name": "التكنولوجيا صديقتك",
+      "position": 11
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/ar/taelim-alanjlyzyh-bikfaa"
+      },
+      "name": "الاستمرارية والمثابرة",
+      "position": 12
+    }
+  ],
+  "educationalLevel": "جميع المستويات",
+  "educationalUse": "التعلم الذاتي",
+  "interactivityType": "توضيحي",
+  "learningResourceType": "دليل",
+  "typicalAgeRange": "13-"
+}
+</script>
 </body>
 </html>
