--- a/bn/ingreji-sikhte-sabche-bhalo-upay.html
+++ b/bn/ingreji-sikhte-sabche-bhalo-upay.html
@@ -413,26 +413,224 @@
     <!-- Structured data for better SEO (JSON-LD) -->
     <script type="application/ld+json">
     {
-        "@context": "https://schema.org",
-        "@type": "Article",
-        "headline": "কার্যকরভাবে ইংরেজি শেখার উপায়: আমার যাত্রা এবং পরামর্শ",
-        "description": "বাস্তব অভিজ্ঞতার উপর ভিত্তি করে আমাদের ব্যাপক গাইডের সাহায্যে কার্যকরভাবে ইংরেজি শেখার প্রমাণিত কৌশলগুলি আবিষ্কার করুন।",
-        "author": {
-            "@type": "Organization",
-            "name": "englishtests.online"
-        },
-        "publisher": {
-            "@type": "Organization",
-            "name": "englishtests.online",
-            "url": "https://englishtests.online/"
-        },
-        "url": "https://englishtests.online/bn/ingreji-sikhte-sabche-bhalo-upay",
-        "mainEntityOfPage": {
-            "@type": "WebPage",
-            "@id": "https://englishtests.online/bn/ingreji-sikhte-sabche-bhalo-upay"
-        },
-        "keywords": "কার্যকরভাবে ইংরেজি শেখা, ইংরেজি শেখার কৌশল, ইংরেজি নিমজ্জন, ইংরেজি শেখার সম্পদ"
+  "@context": "https://schema.org",
+  "@type": "Article",
+  "headline": "কার্যকরভাবে ইংরেজি শেখার উপায়: আমার যাত্রা এবং পরামর্শ",
+  "description": "বাস্তব অভিজ্ঞতার ভিত্তিতে কার্যকরভাবে ইংরেজি শেখার জন্য একটি বিস্তৃত গাইড। লক্ষ্য নির্ধারণ, সক্রিয় অংশগ্রহণ, ভাষায় নিমজ্জন, ব্যক্তিগতকৃত শিক্ষণ কৌশল, শোনা, বলা, পড়া, লেখা, ব্যাকরণ, শব্দভাণ্ডার গঠন, এআই সহকারী সহ প্রযুক্তিগত সরঞ্জাম এবং ধারাবাহিকতার গুরুত্ব অন্তর্ভুক্ত করে।",
+  "keywords": [
+    "কার্যকরভাবে ইংরেজি শেখা",
+    "ইংরেজি শেখার কৌশল",
+    "ইংরেজি ভাষায় নিমজ্জন",
+    "ব্যক্তিগতকৃত ইংরেজি শেখা",
+    "ইংরেজি শোনার অনুশীলন",
+    "ইংরেজি বলার দক্ষতা",
+    "ইংরেজি পঠন বোধ",
+    "ইংরেজি লেখার অনুশীলন",
+    "ইংরেজি ব্যাকরণ টিপস",
+    "ইংরেজি শব্দভাণ্ডার গঠন",
+    "ভাষা শেখার প্রযুক্তি",
+    "ভাষা শেখার জন্য এআই",
+    "ইংরেজি শেখার ধারাবাহিকতা"
+  ],
+  "author": {
+    "@type": "Organization",
+    "name": "englishtests.online",
+    "url": "https://englishtests.online/"
+  },
+  "publisher": {
+    "@type": "Organization",
+    "name": "englishtests.online",
+    "url": "https://englishtests.online/",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://englishtests.online/favicon-192x192.png",
+      "width": 192,
+      "height": 192
     }
-    </script>
+  },
+  "image": {
+    "@type": "ImageObject",
+    "url": "https://englishtests.online/favicon-192x192.png",
+    "width": 192,
+    "height": 192
+  },
+  "datePublished": "2025-03-15",
+  "dateModified": "2025-04-01",
+  "mainEntityOfPage": {
+    "@type": "WebPage",
+    "@id": "https://englishtests.online/bn/ingreji-sikhte-sabche-bhalo-upay"
+  },
+  "url": "https://englishtests.online/bn/ingreji-sikhte-sabche-bhalo-upay",
+  "inLanguage": "bn",
+  "articleSection": "ইংরেজি শেখা",
+  "articleBody": "লক্ষ্য নির্ধারণ, সক্রিয় অংশগ্রহণ, ভাষায় নিমজ্জন, ব্যক্তিগতকৃত শিক্ষণ, শোনা, বলা, পড়া, লেখা, ব্যাকরণ, শব্দভাণ্ডার, প্রযুক্তিগত সরঞ্জাম এবং ধারাবাহিকতার কৌশল সম্পর্কে ব্যবহারিক পরামর্শ সহ কার্যকরভাবে ইংরেজি শিখুন।",
+  "about": {
+    "@type": "Thing",
+    "name": "ইংরেজি ভাষা শেখা"
+  },
+  "mentions": [
+    {
+      "@type": "SoftwareApplication",
+      "name": "Anki",
+      "applicationCategory": "শিক্ষা",
+      "url": "https://apps.ankiweb.net/"
+    },
+    {
+      "@type": "SoftwareApplication",
+      "name": "HelloTalk",
+      "applicationCategory": "যোগাযোগ",
+      "url": "https://www.hellotalk.com"
+    },
+    {
+      "@type": "SoftwareApplication",
+      "name": "ChatGPT",
+      "applicationCategory": "কৃত্রিম বুদ্ধিমত্তা",
+      "url": "https://chat.openai.com/"
+    },
+    {
+      "@type": "SoftwareApplication",
+      "name": "Claude",
+      "applicationCategory": "কৃত্রিম বুদ্ধিমত্তা",
+      "url": "https://claude.ai/"
+    }
+  ],
+  "offers": {
+    "@type": "Offer",
+    "price": "0",
+    "priceCurrency": "USD",
+    "availability": "https://schema.org/InStock"
+  },
+  "alternativeHeadline": "ইংরেজি ভাষা আয়ত্ত করার ১২টি প্রমাণিত কৌশল",
+  "copyrightYear": "2025",
+  "accessibilityAPI": "ARIA",
+  "accessibilityControl": ["fullKeyboardControl", "fullMouseControl"],
+  "accessibilityFeature": ["alternativeText", "structuredNavigation"],
+  "accessibilityHazard": "noFlashingHazard",
+  "creator": {
+    "@type": "Organization",
+    "name": "KubiKDB",
+    "url": "https://play.google.com/store/apps/dev?id=5093525609695433503"
+  },
+  "audience": {
+    "@type": "Audience",
+    "audienceType": "ইংরেজি শিক্ষার্থী"
+  },
+  "potentialAction": {
+    "@type": "ReadAction",
+    "target": {
+      "@type": "EntryPoint",
+      "urlTemplate": "https://englishtests.online/bn/ingreji-sikhte-sabche-bhalo-upay"
+    }
+  },
+  "isPartOf": {
+    "@type": "WebSite",
+    "name": "English Tests Online",
+    "url": "https://englishtests.online/"
+  },
+  "hasPart": [
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/bn/ingreji-sikhte-sabche-bhalo-upay"
+      },
+      "name": "স্পষ্ট লক্ষ্য নির্ধারণ করা",
+      "position": 1
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/bn/ingreji-sikhte-sabche-bhalo-upay"
+      },
+      "name": "সক্রিয় অংশগ্রহণই মূল চাবিকাঠি",
+      "position": 2
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/bn/ingreji-sikhte-sabche-bhalo-upay"
+      },
+      "name": "নিজেকে ভাষায় নিমজ্জিত করুন",
+      "position": 3
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/bn/ingreji-sikhte-sabche-bhalo-upay"
+      },
+      "name": "ব্যক্তিগতকৃত শিক্ষণ",
+      "position": 4
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/bn/ingreji-sikhte-sabche-bhalo-upay"
+      },
+      "name": "আপনার কান প্রশিক্ষণ দিন",
+      "position": 5
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/bn/ingreji-sikhte-sabche-bhalo-upay"
+      },
+      "name": "কথা বলুন!",
+      "position": 6
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/bn/ingreji-sikhte-sabche-bhalo-upay"
+      },
+      "name": "ব্যাপকভাবে পড়ুন",
+      "position": 7
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/bn/ingreji-sikhte-sabche-bhalo-upay"
+      },
+      "name": "লেখার অনুশীলন",
+      "position": 8
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/bn/ingreji-sikhte-sabche-bhalo-upay"
+      },
+      "name": "ব্যাকরণ গুরুত্বপূর্ণ",
+      "position": 9
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/bn/ingreji-sikhte-sabche-bhalo-upay"
+      },
+      "name": "শব্দভাণ্ডারই শক্তি",
+      "position": 10
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/bn/ingreji-sikhte-sabche-bhalo-upay"
+      },
+      "name": "প্রযুক্তি আপনার বন্ধু",
+      "position": 11
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/bn/ingreji-sikhte-sabche-bhalo-upay"
+      },
+      "name": "ধারাবাহিকতা এবং অধ্যবসায়",
+      "position": 12
+    }
+  ],
+  "educationalLevel": "সব স্তর",
+  "educationalUse": "স্ব-অধ্যয়ন",
+  "interactivityType": "ব্যাখ্যামূলক",
+  "learningResourceType": "গাইড",
+  "typicalAgeRange": "13-"
+}
+</script>
 </body>
 </html>
