--- a/pt-br/aprender-ingles-com-eficiencia.html
+++ b/pt-br/aprender-ingles-com-eficiencia.html
@@ -411,26 +411,224 @@
     <!-- Structured data for better SEO (JSON-LD) -->
     <script type="application/ld+json">
     {
-        "@context": "https://schema.org",
-        "@type": "Article",
-        "headline": "Como Aprender Inglês com Eficiência: Minha Jornada e Conselhos",
-        "description": "Descubra estratégias comprovadas para aprender inglês com eficiência com nosso guia abrangente baseado em experiência do mundo real.",
-        "author": {
-            "@type": "Organization",
-            "name": "englishtests.online"
-        },
-        "publisher": {
-            "@type": "Organization",
-            "name": "englishtests.online",
-            "url": "https://englishtests.online/"
-        },
-        "url": "https://englishtests.online/pt-br/aprender-ingles-com-eficiencia",
-        "mainEntityOfPage": {
-            "@type": "WebPage",
-            "@id": "https://englishtests.online/pt-br/aprender-ingles-com-eficiencia"
-        },
-        "keywords": "aprender inglês com eficiência, estratégias de aprendizado de inglês, imersão em inglês, recursos para aprender inglês"
+  "@context": "https://schema.org",
+  "@type": "Article",
+  "headline": "Como Aprender Inglês com Eficiência: Minha Jornada e Conselhos",
+  "description": "Um guia abrangente para aprender inglês com eficiência baseado em experiência real. Aborda definição de metas, engajamento ativo, imersão, estratégias de aprendizado personalizado, audição, fala, leitura, escrita, gramática, construção de vocabulário, ferramentas tecnológicas incluindo assistentes de IA, e a importância da consistência.",
+  "keywords": [
+    "aprender inglês com eficiência",
+    "estratégias de aprendizado de inglês",
+    "imersão em inglês",
+    "aprendizado personalizado de inglês",
+    "prática de audição em inglês",
+    "fluência ao falar inglês",
+    "compreensão de leitura em inglês",
+    "prática de escrita em inglês",
+    "dicas de gramática inglesa",
+    "construção de vocabulário em inglês",
+    "tecnologia para aprendizado de idiomas",
+    "IA para aprendizado de idiomas",
+    "consistência no aprendizado de inglês"
+  ],
+  "author": {
+    "@type": "Organization",
+    "name": "englishtests.online",
+    "url": "https://englishtests.online/"
+  },
+  "publisher": {
+    "@type": "Organization",
+    "name": "englishtests.online",
+    "url": "https://englishtests.online/",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://englishtests.online/favicon-192x192.png",
+      "width": 192,
+      "height": 192
     }
-    </script>
+  },
+  "image": {
+    "@type": "ImageObject",
+    "url": "https://englishtests.online/favicon-192x192.png",
+    "width": 192,
+    "height": 192
+  },
+  "datePublished": "2025-03-15",
+  "dateModified": "2025-04-01",
+  "mainEntityOfPage": {
+    "@type": "WebPage",
+    "@id": "https://englishtests.online/pt-br/aprender-ingles-com-eficiencia"
+  },
+  "url": "https://englishtests.online/pt-br/aprender-ingles-com-eficiencia",
+  "inLanguage": "pt-BR",
+  "articleSection": "Aprendizado de Inglês",
+  "articleBody": "Aprenda a dominar o inglês com eficiência através de conselhos práticos que abordam definição de metas, engajamento ativo, imersão, aprendizado personalizado, audição, fala, leitura, escrita, gramática, vocabulário, ferramentas tecnológicas e estratégias de consistência.",
+  "about": {
+    "@type": "Thing",
+    "name": "Aprendizado da Língua Inglesa"
+  },
+  "mentions": [
+    {
+      "@type": "SoftwareApplication",
+      "name": "Anki",
+      "applicationCategory": "Educação",
+      "url": "https://apps.ankiweb.net/"
+    },
+    {
+      "@type": "SoftwareApplication",
+      "name": "HelloTalk",
+      "applicationCategory": "Comunicação",
+      "url": "https://www.hellotalk.com"
+    },
+    {
+      "@type": "SoftwareApplication",
+      "name": "ChatGPT",
+      "applicationCategory": "Inteligência Artificial",
+      "url": "https://chat.openai.com/"
+    },
+    {
+      "@type": "SoftwareApplication",
+      "name": "Claude",
+      "applicationCategory": "Inteligência Artificial",
+      "url": "https://claude.ai/"
+    }
+  ],
+  "offers": {
+    "@type": "Offer",
+    "price": "0",
+    "priceCurrency": "USD",
+    "availability": "https://schema.org/InStock"
+  },
+  "alternativeHeadline": "12 Estratégias Comprovadas para Dominar o Idioma Inglês",
+  "copyrightYear": "2025",
+  "accessibilityAPI": "ARIA",
+  "accessibilityControl": ["fullKeyboardControl", "fullMouseControl"],
+  "accessibilityFeature": ["alternativeText", "structuredNavigation"],
+  "accessibilityHazard": "noFlashingHazard",
+  "creator": {
+    "@type": "Organization",
+    "name": "KubiKDB",
+    "url": "https://play.google.com/store/apps/dev?id=5093525609695433503"
+  },
+  "audience": {
+    "@type": "Audience",
+    "audienceType": "Estudantes de Inglês"
+  },
+  "potentialAction": {
+    "@type": "ReadAction",
+    "target": {
+      "@type": "EntryPoint",
+      "urlTemplate": "https://englishtests.online/pt-br/aprender-ingles-com-eficiencia"
+    }
+  },
+  "isPartOf": {
+    "@type": "WebSite",
+    "name": "English Tests Online",
+    "url": "https://englishtests.online/"
+  },
+  "hasPart": [
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/pt-br/aprender-ingles-com-eficiencia"
+      },
+      "name": "Estabelecer Metas Claras",
+      "position": 1
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/pt-br/aprender-ingles-com-eficiencia"
+      },
+      "name": "Engajamento Ativo é Fundamental",
+      "position": 2
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/pt-br/aprender-ingles-com-eficiencia"
+      },
+      "name": "Mergulhe no Idioma",
+      "position": 3
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/pt-br/aprender-ingles-com-eficiencia"
+      },
+      "name": "Aprendizado Personalizado",
+      "position": 4
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/pt-br/aprender-ingles-com-eficiencia"
+      },
+      "name": "Treine Seu Ouvido",
+      "position": 5
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/pt-br/aprender-ingles-com-eficiencia"
+      },
+      "name": "Fale Sem Medo!",
+      "position": 6
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/pt-br/aprender-ingles-com-eficiencia"
+      },
+      "name": "Leitura Ampla",
+      "position": 7
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/pt-br/aprender-ingles-com-eficiencia"
+      },
+      "name": "Prática de Escrita",
+      "position": 8
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/pt-br/aprender-ingles-com-eficiencia"
+      },
+      "name": "A Gramática Importa",
+      "position": 9
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/pt-br/aprender-ingles-com-eficiencia"
+      },
+      "name": "Vocabulário é Poder",
+      "position": 10
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/pt-br/aprender-ingles-com-eficiencia"
+      },
+      "name": "A Tecnologia é Sua Aliada",
+      "position": 11
+    },
+    {
+      "@type": "WebPageElement",
+      "isPartOf": {
+        "@id": "https://englishtests.online/pt-br/aprender-ingles-com-eficiencia"
+      },
+      "name": "Consistência e Persistência",
+      "position": 12
+    }
+  ],
+  "educationalLevel": "Todos os Níveis",
+  "educationalUse": "Autoestudo",
+  "interactivityType": "Expositivo",
+  "learningResourceType": "Guia",
+  "typicalAgeRange": "13-"
+}
+</script>
 </body>
 </html>
